--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <div class="hamburger">&#9776</div>
-        <button>FAQ</button>
+        <button>+</button>
     </header>
     <script src="script.js"></script>
 </body>
