--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muhammad Abdullah</title>
     <link rel="shortcut icon" href="logo.jfif" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,6 +26,74 @@
         <div class="hamburger">&#9776</div>
         <button>+</button>
     </header>
+    <section class="skills-section">
+        <div class="container">
+          <h2>Skills</h2>
+          <div class="skills-flex">
+            <div class="skill-item">
+              <h3>Frontend Development</h3>
+              <p>HTML5, CSS3, JavaScript, React.js</p>
+            </div>
+            <div class="skill-item">
+                <h3>Languages</h3>
+                <p>C++, Python, Java, JavaScript</p>
+              </div>
+            <div class="skill-item">
+              <h3>Version Control</h3>
+              <p>Git, GitHub</p>
+            </div>
+            <div class="skill-item">
+              <h3>Problem Solving</h3>
+              <p>Algorithms</p>
+            </div>
+            <div class="skill-item">
+              <h3>Tools</h3>
+              <p>VS Code, Ecllipse, Code Blocks</p>
+            </div>
+            <div class="skill-item">
+                <h3>Projects</h3>
+                <p>CR Electoral System, Calculus Notes Web, Progress Calculator</p>
+              </div>
+          </div>
+        </div>
+      </section>
+              
+    <footer>
+        <div>
+            <h1>
+                More About Me
+            </h1>
+            <a href="#about">About Me</a>
+            <a href="">My Services</a>
+            <a href="">Certifications</a>
+            <a href="">Skills</a>
+        </div>
+        <div>
+            <h1>Get Information</h1>
+            <a href="">FAQ</a>
+            <a href="">Offers</a>
+            <a href="">Payment Options</a>
+            <a href="">Order Tracking</a>
+        </div>
+        <div>
+            <h1>Follow Us</h1>
+            <a href="https://www.facebook.com/share/dEiHZHcNpCF3oz6M/?mibextid=qi2Omg" target="_blank">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+              <a href="https://www.instagram.com/abdullahimtiaz2467?igsh=dnEwNGRpcjRnMTI5" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/muhammad-abdullah-0b532b302?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="https://www.snapchat.com/add/abdv-17?share_id=0CR81mB05Iw&locale=en-GB" target="_blank">
+                <i class="fa-brands fa-snapchat"></i>
+              </a> 
+              <a href="https://github.com/MuhammadAbdullah389" target="_blank">
+                <i class="fa-brands fa-github"></i>
+              </a>             
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
