--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="hamburger">&#9776</div>
         <button>+</button>
     </header>
-    <section class="skills-section">
+    <section class="skills-section" id="skills-section">
         <div class="container">
           <h2>Skills</h2>
           <div class="skills-flex">
@@ -60,23 +60,21 @@
               
     <footer>
         <div>
-            <h1>
-                More About Me
-            </h1>
-            <a href="#about">About Me</a>
+            <h1><span>More About Me</span></h1>
+            <a href="">About Me</a>
             <a href="">My Services</a>
             <a href="">Certifications</a>
-            <a href="">Skills</a>
+            <a href="#skills-section">Skills</a>
         </div>
         <div>
-            <h1>Get Information</h1>
+            <h1><span>Get Information</span></h1>
             <a href="">FAQ</a>
             <a href="">Offers</a>
             <a href="">Payment Options</a>
             <a href="">Order Tracking</a>
         </div>
         <div>
-            <h1>Follow Us</h1>
+            <h1><span>Follow Us</span></h1>
             <a href="https://www.facebook.com/share/dEiHZHcNpCF3oz6M/?mibextid=qi2Omg" target="_blank">
                 <i class="fa-brands fa-facebook"></i>
               </a>
