--- a/index.html
+++ b/index.html
@@ -75,21 +75,23 @@
         </div>
         <div>
             <h1><span>Follow Us</span></h1>
-            <a href="https://www.facebook.com/share/dEiHZHcNpCF3oz6M/?mibextid=qi2Omg" target="_blank">
-                <i class="fa-brands fa-facebook"></i>
-              </a>
-              <a href="https://www.instagram.com/abdullahimtiaz2467?igsh=dnEwNGRpcjRnMTI5" target="_blank">
-                <i class="fa-brands fa-instagram"></i>
-              </a>
-              <a href="https://www.linkedin.com/in/muhammad-abdullah-0b532b302?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
-                <i class="fa-brands fa-linkedin-in"></i>
-              </a>
-              <a href="https://www.snapchat.com/add/abdv-17?share_id=0CR81mB05Iw&locale=en-GB" target="_blank">
-                <i class="fa-brands fa-snapchat"></i>
-              </a> 
-              <a href="https://github.com/MuhammadAbdullah389" target="_blank">
-                <i class="fa-brands fa-github"></i>
-              </a>             
+              <div class="links">
+                <a href="https://www.facebook.com/share/dEiHZHcNpCF3oz6M/?mibextid=qi2Omg" target="_blank">
+                  <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/abdullahimtiaz2467?igsh=dnEwNGRpcjRnMTI5" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/muhammad-abdullah-0b532b302?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+                  <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+                <a href="https://www.snapchat.com/add/abdv-17?share_id=0CR81mB05Iw&locale=en-GB" target="_blank">
+                  <i class="fa-brands fa-snapchat"></i>
+                </a> 
+                <a href="https://github.com/MuhammadAbdullah389" target="_blank">
+                  <i class="fa-brands fa-github"></i>
+                </a> 
+              </div>
         </div>
     </footer>
     <script src="script.js"></script>
