--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills-section">Skills</a></li>
+                <li><a href="index.html#skills-section">Skills</a></li>
                 <li><a href="#">Hire Me</a></li>
                 <li><a href="about.html">About Me</a></li>
             </ul>
@@ -26,50 +26,21 @@
         <div class="hamburger">&#9776</div>
         <button>+</button>
     </header>
-    
-    <section class="skills-section" id="skills-section">
-        <div class="container">
-          <h2>Skills</h2>
-          <div class="skills-flex">
-            <div class="skill-item">
-              <h3>Frontend Development</h3>
-              <p>HTML5, CSS3, JavaScript, React.js</p>
-            </div>
-            <div class="skill-item">
-                <h3>Languages</h3>
-                <p>C++, Python, Java, JavaScript</p>
-              </div>
-            <div class="skill-item">
-              <h3>Version Control</h3>
-              <p>Git, GitHub</p>
-            </div>
-            <div class="skill-item">
-              <h3>Problem Solving</h3>
-              <p>Algorithms</p>
-            </div>
-            <div class="skill-item">
-              <h3>Tools</h3>
-              <p>VS Code, Ecllipse, Code Blocks</p>
-            </div>
-            <div class="skill-item">
-                <h3 id="projects">Projects</h3>
-                <p>
-                  <a href="https://muhammadabdullah389.github.io/CR-Election-System/">CR Electoral System</a>,
-                  <a href="https://shorturl.at/100c6">Calculus Notes Web</a>,
-                  <a href="https://shorturl.at/whe8k">Progress Calculator</a>
-                </p>
-              </div>
-          </div>
-        </div>
-      </section>
-      
+    <section id="about">
+        <h1>About Me</h1>
+        <p>My name is Muhammad Abdullah, a recent graduate from COMSATS University Islamabad , where  I completed my Bachelor's degree in Software Engineering with a distinguished CGPA of 3.73. My academic journey spanned from Spring 2024 to Fall 2027, during which I honed my skills and deepened my understanding of various aspects of technology and software development.
+        My passion lies at the intersection of creativity and logic, which I channel primarily through Software Engineering. I am driven by an insatiable curiosity for learning and a commitment to staying at the forefront of technological advancements. This passion has led me to explore a domain, that is Web Development particulary in Front-End.
+        Throughout my academic career and beyond, I have dedicated countless hours to mastering new technologies and methodologies, always eager to expand my knowledge and improve my craft. My approach to learning is both hands-on and theoretical, allowing me to not only understand the intricacies of each field but also apply this knowledge to real-world projects.
+        As I continue my journey in the tech industry, I am excited about the opportunities that lie ahead and the potential to contribute meaningfully to innovative projects. My ultimate goal is to leverage my skills and passion to solve complex problems, create impactful solutions, and continue growing as a software engineer in an ever-evolving digital landscape.
+        </p>
+    </section>
     <footer>
         <div>
             <h1><span>More About Me</span></h1>
             <a href="about.html">About Me</a>
             <a href="">My Services</a>
             <a href="">Certifications</a>
-            <a href="#skills-section">Skills</a>
+            <a href="index.html#skills-section">Skills</a>
         </div>
         <div>
             <h1><span>Get Information</span></h1>
@@ -99,6 +70,5 @@
               </div>
         </div>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
