--- a/about.html
+++ b/about.html
@@ -27,13 +27,39 @@
         <button>+</button>
     </header>
     <section id="about">
-        <h1>About Me</h1>
-        <p>My name is Muhammad Abdullah, a recent graduate from COMSATS University Islamabad , where  I completed my Bachelor's degree in Software Engineering with a distinguished CGPA of 3.73. My academic journey spanned from Spring 2024 to Fall 2027, during which I honed my skills and deepened my understanding of various aspects of technology and software development.
-        My passion lies at the intersection of creativity and logic, which I channel primarily through Software Engineering. I am driven by an insatiable curiosity for learning and a commitment to staying at the forefront of technological advancements. This passion has led me to explore a domain, that is Web Development particulary in Front-End.
-        Throughout my academic career and beyond, I have dedicated countless hours to mastering new technologies and methodologies, always eager to expand my knowledge and improve my craft. My approach to learning is both hands-on and theoretical, allowing me to not only understand the intricacies of each field but also apply this knowledge to real-world projects.
-        As I continue my journey in the tech industry, I am excited about the opportunities that lie ahead and the potential to contribute meaningfully to innovative projects. My ultimate goal is to leverage my skills and passion to solve complex problems, create impactful solutions, and continue growing as a software engineer in an ever-evolving digital landscape.
-        </p>
-    </section>
+      <h1 id="head">About Me</h1>
+      <p>My name is Muhammad Abdullah, a dedicated Software Engineer with a passion for innovation. I am driven to continually explore the latest technologies.</p>
+
+      <h2>Early Life and Education</h2>
+      <p>I was born in Lodhran, Punjab, Pakistan. I attended PINS School and College in Lodhran, where I developed a strong foundation in academics. I achieved an SSC score of 1080 out of 1100 (98.18%) and an HSSC score of 1003 out of 1100 (91.18%). I am currently studying at COMSATS University Islamabad, where I have taken courses in Programming Fundamentals, Object-Oriented Programming (OOP), Database Management Systems (DBMS), Web Technologies, and ICT. I hold a GPA of 3.73. During my studies, various projects and coursework deepened my passion for software engineering.</p>
+
+      <h2>Professional Journey</h2>
+      <p>As a student at COMSATS University Islamabad, I have undertaken independent projects that showcase my skills. Notable projects include a Current Score Calculator, a Calculus Notes Website, and a CR Electoral System Website. Each project has helped me apply my knowledge to solve real-world problems, enhancing my technical skills and creativity.</p>
+
+      <h2>Skills and Technologies</h2>
+      <ul>
+          <li><strong>Frontend Development:</strong> HTML5, CSS3, JavaScript, React.js</li>
+          <li><strong>Programming Languages:</strong> Python, C++, Java</li>
+          <li><strong>Problem Solving:</strong> Proficient in data structures and algorithms</li>
+          <li><strong>Tools:</strong> Visual Studio Code</li>
+      </ul>
+
+      <h2>Projects and Portfolio Highlights</h2>
+      <ul>
+          <li><strong>Current Score Calculator:</strong> A tool designed to help students calculate their current scores based on specific weightage for assessments.</li>
+          <li><strong>Calculus Notes Website:</strong> An educational platform providing comprehensive notes for Calculus 1 and 2.</li>
+          <li><strong>CR Electoral System Website:</strong> An interactive system allowing students to cast their votes and register for new votes, featuring a password-protected results section.</li>
+      </ul>
+
+      <h2>Current Role and Aspirations</h2>
+      <p>As a dedicated student, I am focused on enhancing my knowledge in software engineering. My goal is to deep dive into backend development and Database Management Systems (DBMS).</p>
+
+      <h2>Contact Information</h2>
+      <ul>
+          <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/muhammad-abdullah-0b532b302?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Muhammad Abdullah's LinkedIn</a></li>
+          <li><strong>GitHub:</strong> <a href="https://github.com/MuhammadAbdullah389">Muhammad Abdullah's GitHub</a></li>
+      </ul>
+  </section>
     <footer>
         <div>
             <h1><span>More About Me</span></h1>
