Updated some bugs

--- a/about.html
+++ b/about.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muhammad Abdullah</title>
-    <link rel="shortcut icon" href="logo.jfif" type="image/x-icon">
+    <link rel="shortcut icon" href="./Images/logo.jfif" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="logo.jfif" alt="Logo">
+            <img src="./Images/logo.jfif" alt="Logo">
             <span>Portfolio</span>
         </div>
         <nav>
@@ -41,13 +41,13 @@
           <li><strong>Frontend Development:</strong> HTML5, CSS3, JavaScript, React.js</li>
           <li><strong>Programming Languages:</strong> Python, C++, Java</li>
           <li><strong>Problem Solving:</strong> Proficient in data structures and algorithms</li>
-          <li><strong>Tools:</strong> Visual Studio Code</li>
+          <li><strong>Tools:</strong>Git, GitHub</li>
       </ul>
 
       <h2>Projects and Portfolio Highlights</h2>
       <ul>
           <li><strong>Current Score Calculator:</strong> A tool designed to help students calculate their current scores based on specific weightage for assessments.</li>
-          <li><strong>Calculus Notes Website:</strong> An educational platform providing comprehensive notes for Calculus 1 and 2.</li>
+          <li><strong>Calculus Notes Website:</strong> An educational platform providing comprehensive notes for Calculus 2.</li>
           <li><strong>CR Electoral System Website:</strong> An interactive system allowing students to cast their votes and register for new votes, featuring a password-protected results section.</li>
       </ul>
 
@@ -76,7 +76,7 @@
             <a href="">Order Tracking</a>
         </div>
         <div>
-            <h1><span>Follow Us</span></h1>
+            <h1><span>Get In Touch!</span></h1>
               <div class="links">
                 <a href="https://www.facebook.com/share/dEiHZHcNpCF3oz6M/?mibextid=qi2Omg" target="_blank">
                   <i class="fa-brands fa-facebook"></i>
