--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muhammad Abdullah</title>
-    <link rel="shortcut icon" href="logo.jfif" type="image/x-icon">
+    <link rel="shortcut icon" href="./Images/logo.jfif" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="logo.jfif" alt="Logo">
+            <img src="./Images/logo.jfif" alt="Logo">
             <span>Portfolio</span>
         </div>
         <nav>
@@ -79,7 +79,7 @@
             <a href="">Order Tracking</a>
         </div>
         <div>
-            <h1><span>Follow Us</span></h1>
+            <h1><span>Get In Touch!</span></h1>
               <div class="links">
                 <a href="https://www.facebook.com/share/dEiHZHcNpCF3oz6M/?mibextid=qi2Omg" target="_blank">
                   <i class="fa-brands fa-facebook"></i>
