Modified the hearchy

--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     <title>Muhammad Abdullah</title>
     <link rel="shortcut icon" href="./Images/logo.jfif" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="StyleShhets/mainStyle.css">
+    <link rel="stylesheet" href="StyleShhets/about.css">
 </head>
 <body>
     <header>
@@ -17,14 +18,14 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="index.html#skills-section">Skills</a></li>
                 <li><a href="#">Hire Me</a></li>
                 <li><a href="about.html">About Me</a></li>
             </ul>
         </nav>
         <div class="hamburger">&#9776</div>
-        <button>+</button>
+        <button>Hire Me</button>
     </header>
     <section id="about">
       <h1 id="head">About Me</h1>
@@ -69,11 +70,11 @@
             <a href="index.html#skills-section">Skills</a>
         </div>
         <div>
-            <h1><span>Get Information</span></h1>
-            <a href="">FAQ</a>
-            <a href="">Offers</a>
-            <a href="">Payment Options</a>
-            <a href="">Order Tracking</a>
+          <h1><span>Courses</span></h1>
+          <a href="">JavaScript</a>
+          <a href="">HTML</a>
+          <a href="">CSS</a>
+          <a href="">React JS</a>
         </div>
         <div>
             <h1><span>Get In Touch!</span></h1>
