--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <a href="">JavaScript</a>
             <a href="">HTML</a>
             <a href="">CSS</a>
-            <a href="">React JS</a>
+            <a href="">Node JS</a>
         </div>
         <div>
             <h1><span>Get In Touch!</span></h1>
